--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Cadena_Default": "Server=DESKTOP-9C40NVG\\SQLEXPRESS;Database= ;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
