--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Cadena_Default": "Server=DESKTOP-9C40NVG\\SQLEXPRESS;Database= ;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    "Cadena_Default": "Server=DESKTOP-9C40NVG\\SQLEXPRESS;Database= Blazor_Crud_Libro;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
